# cream-cli

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: file.rs  main.rs  rest.rs
