[package]
name = "cream-cli"
description = "CLI to collect and generate DLC list for CreamAPI config file"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
clap = { version = "=4.5.61", features = ["derive"] }
futures = "0.3.33"
html-escape = "0.2.14"
md5 = "=0.7.0"
reqwest = { version = "=0.12.28", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.53", features = ["full"] }
walkdir = "2.5.0"
zip = { version = "=4.2.0", default-features = false, features = ["deflate", "lzma"] }

[profile.release]
opt-level = "z"
lto = true
#strip = true

[lints.rust]
unused = "allow"
